  * Fix tests should use results.rmsf to avoid DeprecationWarning (Issue #3695)
  * Fix EDRReader failing when parsing single-frame EDR files (Issue #3999)
  * Fix test clobbering in lib/test_util.py (PR #4000)
  * Fix MSD docs to use the correct error metric in example (Issue #3991)
  * Add 'PairIJ Coeffs' to the list of sections in LAMMPSParser.py
    (Issue #3336)

Enhancements
  * Add `progressbar_kwargs` parameter to `AnalysisBase.run` method, allowing to modify description, position etc of tqdm progressbars.
  * Add a nojump transformation, which unwraps trajectories so that particle
    paths are continuous. (Issue #3703, PR #4031)
  * Added AtomGroup TopologyAttr to calculate gyration moments (Issue #3904,
    PR #3905)
  * Add support for TPR files produced by Gromacs 2023 (Issue #4047)
  * Add distopia distance calculation library bindings as a selectable backend
    for `calc_bonds` in `MDA.lib.distances`. (Issue #3783, PR #3914)
  * AuxReaders are now pickle-able and copy-able (Issue #1785, PR #3887)
  * Add pickling support for Atom, Residue, Segment, ResidueGroup 
    and SegmentGroup. (PR #3953)

Changes
  * einsum method for Einstein summation convention introduced to increase 
    performance (Issue #2063, PR #4089)
  * Add progress bars to track the progress of _conclude() functions
    (_conclude_simple() and _conclude_fft()) in msd.py (Issue #4070, PR #4072)
  * As per NEP29 the minimum supported NumPy version has been raised to 1.21
    (note: in practice later versions of NumPy may be used depending on your
     architecture, operating system, or Python version) (PR #3983)
  * The deprecated direct indexing and `times` from the `results` attribute of
    analysis.nucleicacids' NucPairDist and WatsonCrickDist classes has been
    removed. Please use the `results.pair_distances` and `times` attributes
    instead (Issue #3744)

Deprecations


03/29/23 richardjgowers, IAlibay

 * 2.4.3

Fixes