@@ -273,7 +273,7 @@ class DATAWriter(base.WriterBase):
         self.units['velocity'] = kwargs.pop('velocityunit',
                                  self.units['length']+'/'+self.units['time'])
 
-    def _write_atoms(self, atoms):
+    def _write_atoms(self, atoms, data):
         self.f.write('\n')
         self.f.write('Atoms\n')
         self.f.write('\n')
@@ -288,20 +288,27 @@ class DATAWriter(base.WriterBase):
         indices = atoms.indices + 1
         types = atoms.types.astype(np.int32)
 
+        try:
+            moltags = data['molecule_tag']
+        except KeyError:
+            moltags = [0] * len(atoms)
+
+
         if self.convert_units:
             coordinates = self.convert_pos_to_native(atoms.positions, inplace=False)
 
         if has_charges:
-            for index, atype, charge, coords in zip(indices, types, charges,
-                    coordinates):
-                self.f.write('{i:d} 0 {t:d} {c:f} {x:f} {y:f} {z:f}\n'.format(
-                             i=index, t=atype, c=charge, x=coords[0],
+            for index, moltag, atype, charge, coords in zip(indices, moltags,
+                    types, charges, coordinates):
+                self.f.write('{i:d} {m:d} {t:d} {c:f} {x:f} {y:f} {z:f}\n'.format(
+                             i=index, m=moltag, t=atype, c=charge, x=coords[0],
                              y=coords[1], z=coords[2]))
         else:
-            for index, atype, coords in zip(indices, types, coordinates):
-                self.f.write('{i:d} 0 {t:d} {x:f} {y:f} {z:f}\n'.format(
-                             i=index, t=atype, x=coords[0], y=coords[1],
-                             z=coords[2]))
+            for index, moltag, atype, coords in zip(indices, moltags, types,
+                    coordinates):
+                self.f.write('{i:d} {m:d} {t:d} {x:f} {y:f} {z:f}\n'.format(
+                             i=index, m=moltag, t=atype, x=coords[0],
+                             y=coords[1], z=coords[2]))
 
     def _write_velocities(self, atoms):
         self.f.write('\n')
@@ -397,6 +404,8 @@ class DATAWriter(base.WriterBase):
         else:
             frame = u.trajectory.ts.frame
 
+        data = u.trajectory.ts.data
+
         # make sure to use atoms (Issue 46)
         atoms = selection.atoms
 
@@ -441,7 +450,7 @@ class DATAWriter(base.WriterBase):
             self._write_dimensions(atoms.dimensions)
 
             self._write_masses(atoms)
-            self._write_atoms(atoms)
+            self._write_atoms(atoms, data)
             for attr in features.values():
                 if attr is None or len(attr) == 0:
                     continue
